--- a/templates/TemplateApp.cbp
+++ b/templates/TemplateApp.cbp
@@ -8,7 +8,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/TemplateApp-d" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="bin" />
+				<Option working_dir="bin/" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,14 +16,14 @@
 					<Add option="-g" />
 				</Compiler>
 				<Linker>
-					<Add library="..\sdk\lib\libPtakopysk-d.a" />
-					<Add library="..\sdk\lib\libsfml-audio-s-d.a" />
-					<Add library="..\sdk\lib\libsfml-graphics-s-d.a" />
-					<Add library="..\sdk\lib\libsfml-window-s-d.a" />
-					<Add library="..\sdk\lib\libsfml-system-s-d.a" />
-					<Add library="..\sdk\lib\libBox2D-d.a" />
-					<Add library="..\sdk\lib\libJsonCpp-d.a" />
-					<Add library="..\sdk\lib\libXenonCore3-d.a" />
+					<Add library="libPtakopysk-d.a" />
+					<Add library="libsfml-audio-s-d.a" />
+					<Add library="libsfml-graphics-s-d.a" />
+					<Add library="libsfml-window-s-d.a" />
+					<Add library="libsfml-system-s-d.a" />
+					<Add library="libBox2D-d.a" />
+					<Add library="libJsonCpp-d.a" />
+					<Add library="libXenonCore3-d.a" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -37,14 +37,14 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="..\sdk\lib\libPtakopysk.a" />
-					<Add library="..\sdk\lib\libsfml-audio-s.a" />
-					<Add library="..\sdk\lib\libsfml-graphics-s.a" />
-					<Add library="..\sdk\lib\libsfml-window-s.a" />
-					<Add library="..\sdk\lib\libsfml-system-s.a" />
-					<Add library="..\sdk\lib\libBox2D.a" />
-					<Add library="..\sdk\lib\libJsonCpp.a" />
-					<Add library="..\sdk\lib\libXenonCore3.a" />
+					<Add library="libPtakopysk.a" />
+					<Add library="libsfml-audio-s.a" />
+					<Add library="libsfml-graphics-s.a" />
+					<Add library="libsfml-window-s.a" />
+					<Add library="libsfml-system-s.a" />
+					<Add library="libBox2D.a" />
+					<Add library="libJsonCpp.a" />
+					<Add library="libXenonCore3.a" />
 				</Linker>
 			</Target>
 		</Build>
@@ -54,6 +54,9 @@
 			<Add option="-DSFML_STATIC" />
 			<Add directory="../sdk/include" />
 		</Compiler>
+		<Linker>
+			<Add directory="../sdk/lib" />
+		</Linker>
 		<Unit filename="TemplateComponent.cpp" />
 		<Unit filename="TemplateComponent.h" />
 		<Unit filename="TemplateMain.cpp" />
