--- a/development/Ptakopysk/Ptakopysk.cbp
+++ b/development/Ptakopysk/Ptakopysk.cbp
@@ -51,53 +51,6 @@
 					<Add library="..\requirements\SFML-2.1\lib\libsfml-system-s.a" />
 				</Linker>
 			</Target>
-			<Target title="Debug Dynamic">
-				<Option output="bin/Ptakopysk-d" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME)-dll" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME)-dll.def" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="bin" />
-				<Option object_output="obj/DebugDynamic/" />
-				<Option type="3" />
-				<Option compiler="gcc" />
-				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
-				<Compiler>
-					<Add option="-Wall" />
-					<Add option="-g" />
-				</Compiler>
-				<Linker>
-					<Add library="..\requirements\xenon-core-3-sdk\Code\Engine\XenonCore3\libs\libXenonCore3-d.a" />
-					<Add library="..\requirements\JsonCpp\bin\Debug\libJsonCpp.a" />
-					<Add library="..\requirements\BinaryJson\libs\libBinaryJson-d.a" />
-					<Add library="..\requirements\Box2D\bin\Debug\libBox2D.a" />
-					<Add library="..\requirements\SFML-2.1\lib\libsfml-audio-s-d.a" />
-					<Add library="..\requirements\SFML-2.1\lib\libsfml-graphics-s-d.a" />
-					<Add library="..\requirements\SFML-2.1\lib\libsfml-window-s-d.a" />
-					<Add library="..\requirements\SFML-2.1\lib\libsfml-system-s-d.a" />
-				</Linker>
-			</Target>
-			<Target title="Release Dynamic">
-				<Option output="bin/Ptakopysk" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME)-dll" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME)-dll" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="bin" />
-				<Option object_output="obj/ReleaseDynamic/" />
-				<Option type="3" />
-				<Option compiler="gcc" />
-				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add option="-Wall" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add library="..\requirements\xenon-core-3-sdk\Code\Engine\XenonCore3\libs\libXenonCore3.a" />
-					<Add library="..\requirements\JsonCpp\bin\Release\libJsonCpp.a" />
-					<Add library="..\requirements\BinaryJson\libs\libBinaryJson.a" />
-					<Add library="..\requirements\Box2D\bin\Release\libBox2D.a" />
-					<Add library="..\requirements\SFML-2.1\lib\libsfml-audio-s.a" />
-					<Add library="..\requirements\SFML-2.1\lib\libsfml-graphics-s.a" />
-					<Add library="..\requirements\SFML-2.1\lib\libsfml-window-s.a" />
-					<Add library="..\requirements\SFML-2.1\lib\libsfml-system-s.a" />
-				</Linker>
-			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-DSFML_STATIC" />
@@ -127,6 +80,7 @@
 		<Unit filename="include/Ptakopysk/System/Events.h" />
 		<Unit filename="include/Ptakopysk/System/GameManager.h" />
 		<Unit filename="include/Ptakopysk/System/GameObject.h" />
+		<Unit filename="include/Ptakopysk/System/GameObject.inl" />
 		<Unit filename="include/Ptakopysk/System/Math.h" />
 		<Unit filename="include/Ptakopysk/System/Math.inl" />
 		<Unit filename="include/Ptakopysk/System/RenderMaterial.h" />
