--- a/development/ZasuvkaPtakopyska/ZasuvkaPtakopyska/ZasuvkaPtakopyska.csproj
+++ b/development/ZasuvkaPtakopyska/ZasuvkaPtakopyska/ZasuvkaPtakopyska.csproj
@@ -98,6 +98,10 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PtakopyskInterface.cs" />
+    <Compile Include="PtakopyskSceneRenderer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="RendererSurfaceControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
