missing physics property editors added; some property editors modified; meta generator improvement

--- a/development/ZasuvkaPtakopyska/ZasuvkaPtakopyskaExtender/ZasuvkaPtakopyskaExtender.csproj
+++ b/development/ZasuvkaPtakopyska/ZasuvkaPtakopyskaExtender/ZasuvkaPtakopyskaExtender.csproj
@@ -59,6 +59,15 @@
     <Compile Include="Editors\Bool_PropertyEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Editors\BodyType_PropertyEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Editors\Filter_PropertyEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Editors\FloatVector2Collection_PropertyEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Editors\CollectionPropertyEditorUtils.cs" />
     <Compile Include="Editors\Color_PropertyEditor.cs">
       <SubType>UserControl</SubType>
