custom assets feature added into framework and IDE

--- a/development/EditorComponentsTemplate/EditorComponentsTemplate.cbp
+++ b/development/EditorComponentsTemplate/EditorComponentsTemplate.cbp
@@ -67,6 +67,7 @@
 		<Linker>
 			<Add directory="../../sdk/lib" />
 		</Linker>
+		<Unit filename="../../sdk/templates/TemplateAsset.cpp" />
 		<Unit filename="../../sdk/templates/TemplateComponent.cpp" />
 		<Unit filename="dllmain.cpp" />
 		<Extensions>
